--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Cam Master</string>
     <string name="cammaster">CamMaster</string>
+    <string name="mydocs">MyDocs</string>
+    <string name="no_scanned_docs_yet">No Scanned Docs Yet..</string>
+    <string name="ocr_text_detection">OCR (Text Detection)</string>
+    <string name="barcode_scanning">Barcode Scanning</string>
+    <string name="about">About</string>
+    <string name="camera">Camera</string>
+    <string name="files">Files</string>
 </resources>
