--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="name_your_doc">Name your DOC</string>
     <string name="save_as_image">Save as image</string>
     <string name="save_as_pdf">Save as PDF</string>
+    <string name="share">Share</string>
+    <string name="delete">Delete</string>
 </resources>
