--- a/scanlibrary/src/main/res/values/strings.xml
+++ b/scanlibrary/src/main/res/values/strings.xml
@@ -7,10 +7,13 @@
     <string name="scanning">Scanning</string>
     <string name="done">Save</string>
     <string name="scan">Next</string>
-    <string name="cantCrop">Cant crop the image, change the points</string>
-    <string name="ok">Ok</string>
+    <string name="cantCrop">Can not crop the image, change the points</string>
+    <string name="ok">OK</string>
     <string name="loading">Loading</string>
     <string name="applying_filter">Applying filter</string>
     <string name="low_memory">Low Memory</string>
     <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>
+    <string name="file_name">File Name</string>
+    <string name="save_as_image">Save As Image</string>
+    <string name="save_as_pdf">Save As Pdf</string>
 </resources>
