--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="text_recognition">Text Recognition</string>
     <string name="rate_us">Rate Us</string>
     <string name="share_cam_master">Share CamMaster</string>
+    <string name="please_press_and_hold_the_text_for_copy">Please press and hold the text for copy and share.</string>
+    <string name="ocr_error_message">Image do not contain any text or image quality is not good (OCR scans only English language and latin characters)</string>
 </resources>
