commit for final app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="share_cam_master">Share CamMaster</string>
     <string name="please_press_and_hold_the_text_for_copy">Please press and hold the text for copy and share.</string>
     <string name="ocr_error_message">Image do not contain any text or image quality is not good (OCR scans only English language and latin characters)</string>
+    <string name="version">version</string>
 </resources>
