--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="terms_and_conditions">Terms &amp; Conditions</string>
     <string name="no_internet">No Internet Connected</string>
+    <string name="file_name_is_already_exist_please_rename_this_pdf_file">File name is already exist. Please rename this pdf file.</string>
+    <string name="convert_pdf">Convert PDF</string>
 </resources>
