commit for scan library depricated code changed

--- a/scanlibrary/src/main/res/values/strings.xml
+++ b/scanlibrary/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>
     <string name="file_name">File Name</string>
     <string name="save_as_image">Save As Image</string>
-    <string name="save_as_pdf">Save As Pdf</string>
+    <string name="save_as_pdf">Save As PDF</string>
     <string name="for_better_results_use_brightness_or_contrast">For better results increase brightness or contrast.</string>
     <string name="brightness">Brightness</string>
     <string name="contrast">Contrast</string>
