--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="dark_theme">Dark Theme</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+    <string name="enable_app_lock">Enable App Lock</string>
 </resources>
