--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -29,4 +29,5 @@
     <string name="dark_theme">Dark Theme</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+    <string name="search_doc">Search doc</string>
 </resources>
