--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="enable_app_lock">Enable App Lock</string>
+    <string name="search_doc">Search doc</string>
 </resources>
