--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -27,7 +27,7 @@
     <string name="settings">Settings</string>
     <string name="off">OFF</string>
     <string name="on">ON</string>
-    <string name="dark_theme">Dark Theme</string>
+    <string name="light_theme">Light Theme</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="search_doc">Search doc</string>
